--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,20 +1,11 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: 'Lebesgue Integration for Engineers'
+date: 2020-04-19
+permalink: /posts/2020/04/lebesgue-integration-for-engineers/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - Lebesgue Integration
+  - Mathematics
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+This is a space holder for future development 
 
-Headings are cool
-======
-
-You can have many headings
-======
-
-Aren't headings cool?
-------
